@@ -4,6 +4,7 @@ master
 - noface
   Added new option 'Indicate Quotes of You'.
   Added new button '4chan Pass' for quick access to the authentication.
+  Renamed 'Optional Increase' to 'Dynamic Increase'.
 
 2.38.5
 - Mayhem
